Fix issue with misaligned arrows

--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,7 @@ html,body {
   position: absolute;
   z-index: 10;
   top: 50%;
-  transform: translateY(-50%);
+  /* transform: translateY(-50%); */
   fill: white;
 }
 
